# wordchamp

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  package-lock.json
Gestion de projet/Définition du projet/: Charte_projet.md  Matrice_RACI.md  WBS.md
backend/: Dockerfile  app.py  requirements.txt  setup.py
backend/misc/: dev_database_setup.py  dev_wordlist  load_dev_wordlist.py
backend/models/: __init__.py  dictionnaire.py  game.py  game_carriere.py  game_normal.py  game_survie.py  games.py  games_normal.py  tries.py  try.py  user.py  word.py
backend/routes/: __init__.py  avatar.py  carriere.py  choicecarriere.py  classement.py  creategame.py  currentGame.py  currentgamecarriere.py  history.py  historyDebug.py  login.py  motValide.py  motValideDebug.py  ping.py  play.py  profile.py  puzzle.py  register.py  send_try.py  send_try_carriere.py  word.py  wordguess.py
backend/utils/: classLeters.py  eloFunctions.py  estGagnee.py  evalDifficulty.py  getword.py  isMot.py  motValide.py  timestamp.py  wordcheck.py
c/: dico.txt  open_dict.c  open_dict.h  open_dict_test.c  opentest
frontend/: .env.development  .env.production  .gitignore  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: axios-auth.js  axios-refresh.js  store.js
frontend/src/components/: ChoiceSlider.vue  DetailedEntry.vue  DetailedHistory.vue  GetWord.vue  HistoryEntry.vue  HistoryTable.vue  KeyBoard.vue  Keyboard.vue  Letter.vue  LoadingSlider.vue  Ping.vue  PingComponent.vue  ProfileMain.vue  SousTemplate.vue  WordLetter.vue  WordRow.vue
frontend/src/router/: index.js
frontend/src/views/: CarrierePage.vue  Choice.vue  ChoiceCarriere.vue  ClassementPage.vue  History.vue  HistoryPage.vue  Home.vue  Login.vue  Logout.vue  Profile.vue  PuzzlePage.vue  Random.vue  Redirect.vue  Register.vue  Word.vue  WordPage.vue
solveur/: CMakeCache.txt  Makefile  array_test_int  cmake_install.cmake  dico.txt  freqsolve  linkedtest
solveur/ebauches/impl1/: dict.py  game.py  solver.py
solveur/ebauches/impl2/: bruteforce.go  go.mod  graph.go  main.go  test.json  utils.go  weights.go  wordle.go
solveur/solveur_3b1b/src/: dico.c  dico.h  dico_test.c  open_dict.h  solv_3b1b.c  solv_3b1b.h  solv_3b1b_main.c  table_test.c
solveur/solveur_3b1b/test/: solv_3b1b_test.c
solveur/solveur_3t/src/: linked_list.c  linked_list.h
solveur/solveur_3t/test/: CMakeLists.txt
solveur/solveur_naif/src/: letter.c  table.c
solveur/solveur_naif/test/: CMakeLists.txt  test.c
solveur/solveur_naif_bis/src/: naif.c  naif.h  strInt.h
solveur/solveur_naif_bis/test/: CMakeLists.txt  naif_test  naif_test.c
solveur/src/: array.c  array.h  freqsolve.c  freqsolve.h  linked_list.c  linked_list.h  linked_list_test.c  naif.c  naif.h  open_dict.c  open_dict.h  strInt.h  tree.c  tree.h  wordle.c  wordle.h
solveur/src/solveur_3b1b/: CMakeLists.txt  solv_3b1b.c  solv_3b1b.h  solv_3b1b_main.c
solveur/src/solveur_3b1b/Test/: CMakeLists.txt  solv_3b1b_test.c
solveur/src/solveur_3b1b/hash_table/: CMakeLists.txt  dico.c  list.c  list_test.c  table.c
solveur/test/: CMakeLists.txt  array_test.c  array_test_int.c  open_dict_test.c
solveur/wordle/src/: wordle.c  wordle.h
solveur/wordle/test/: CMakeLists.txt
solveur2/: CMakeLists.txt
solveur2/solveur_3b1b/src/: list.h  open_dict.c  solv_3b1b.c  solv_3b1b.h  table.h
solveur2/solveur_3b1b/test/: CMakeLists.txt
solveur2/solveur_3t/src/: freqsolve.c  freqsolve.h
solveur2/solveur_3t/test/: linked_list_test.c  open_dict_test.c
solveur2/solveur_naif/: CMakeLists.txt
solveur2/solveur_naif/src/: game.c  game.h  letter.h  list.c  list.h  table.h  word.c  word.h  wordlist.c  wordlist.h
testeur/: files.go  go.mod  go.sum  main.go  readme.md  runner.go  stats.go  wordle.go
testeur/testeur_testeur/: go.mod  main.go
